@@ -1,24 +1,32 @@
 package rm.tabou2.facade.spring.security;
 
 import java.util.Arrays;
-
-import javax.servlet.Filter;
+import java.util.List;
 
 import org.ocpsoft.rewrite.servlet.RewriteFilter;
 import org.springframework.context.annotation.Bean;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.core.GrantedAuthorityDefaults;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import jakarta.servlet.Filter;
+
+@Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(securedEnabled = true)
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+@EnableMethodSecurity(securedEnabled = true)
+public class WebSecurityConfig {
 
 	private static final String[] PERMIT_ALL_URL = {
 
@@ -26,21 +34,25 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 			"/configuration/*",
 
 			// -- swagger ui
-			"/v2/api-docs", "/swagger-resources", "/swagger-resources/**", "/configuration/ui",
-			"/configuration/security", "/swagger-ui.html", "/webjars/**" };
+			"/v3/api-docs/**", "/swagger-resources", "/swagger-resources/**", "/configuration/ui",
+			"/configuration/security", "/swagger-ui.html", "/swagger-ui/**", "/webjars/**" };
 
-	@Override
-	protected void configure(final HttpSecurity http) throws Exception {
-		http.cors().and()
+	@Bean
+	protected SecurityFilterChain filterChain(final HttpSecurity http) throws Exception {
+		http.cors(Customizer.withDefaults()).csrf(AbstractHttpConfigurer::disable)
 				// starts authorizing configurations
-				.authorizeRequests()
-				// ignoring the guest's urls "
-				.antMatchers(PERMIT_ALL_URL).permitAll()
-				// authenticate all remaining URLS
-				.anyRequest().fullyAuthenticated().and().authorizeRequests().and().exceptionHandling().and()
+				.authorizeHttpRequests((authorizeHttpRequests -> authorizeHttpRequests
+						// ignoring the guest's urls "
+						.requestMatchers(PERMIT_ALL_URL).permitAll()
+						// authenticate all remaining URLS
+						.anyRequest().fullyAuthenticated()))
+				.exceptionHandling(Customizer.withDefaults())
 				// configuring the session on the server
-				.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and().csrf().disable()
-				.addFilterAfter(createPreAuthenticationFilter(), BasicAuthenticationFilter.class).sessionManagement();
+				.sessionManagement(
+						sessionManagement -> sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+				// installation des filtres
+				.addFilterAfter(createPreAuthenticationFilter(), BasicAuthenticationFilter.class);
+		return http.build();
 	}
 
 	@Bean
@@ -52,7 +64,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 		// Url autorisées
 		// 4200 pour les développement | 8080 pour le déploiement
-		configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+		configuration.setAllowedOriginPatterns(List.of("*"));
 
 		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
@@ -66,6 +78,21 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 	private Filter createPreAuthenticationFilter() {
 		return new PreAuthenticationFilter();
+	}
+
+	protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+		auth.inMemoryAuthentication().withUser("admin").password("{noop}4dM1nApp!").roles("ADMIN");
+		auth.authenticationProvider(createPreAuthenticationProvider());
+	}
+
+	private AuthenticationProvider createPreAuthenticationProvider() {
+		return new PreAuthenticationProvider();
+	}
+
+	@Bean
+	protected GrantedAuthorityDefaults grantedAuthorityDefaults() {
+		// Remove the ROLE_ prefix
+		return new GrantedAuthorityDefaults("");
 	}
 
 }
